--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,12 +44,12 @@ theme:
       scheme: default
       toggle:
         icon: material/weather-sunny
-        name: Switch to dark
+        name: 黑
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       toggle:
         icon: material/weather-night
-        name: Switch to light
+        name: 亮
   features:
     - navigation.tracking
     - navigation.top
@@ -62,7 +62,7 @@ plugins:
   - search
 
 extra_css:
-  - stylesheets/img.css
+  - css/img.css
 
 nav:
   - 主页: index.md
